2.5.3 -> 2.5.4:
	- solaris portability patch resurrection (Steve Sanberg).
	- permit autogen.sh to work on non "prefix=/usr" hosts.
	- add %license/%readme virtual file attributes
	- align "Build Host:" with other fields

2.5.2 -> 2.5.3:
	- copy changelog tags to sub-packages just before packaging
	- added EPOCH handling to supplement serial numbers
	- add RPMTAG_EPOCH and RPMTAG_CAPABILITY init to 0.
	- fix infinite recursion on non-ERANGE return from getcwd() during
	  install (Matt Wilson).
	- rm .depend for multiple builds in same tree (Will Partain)
	- addFile: fix special case of "/" in %files.
	- better query semantics with symlinks (Tim Mooney)
	- build.c: fix incorrect check for successful open
	- allow %define with leading whitespace
	- use /usr/lib/rpm for rpmpopt, rpmrc, find-requires, find-provides
	- added popt 'exec' functionality
	- made --rebuilddb a bit more robust by checking data types
	- added --freshen via popt exec stuff
	- fixed spelling of expected
	- updated de.po (Karl Eichwalder)
	- do a better job of checking for a spec file in tarballs 
	  (Pavel Roskin)
	- fixed --triggers alias (Michael Andres)
	- added :hex query format
	- fixed --querytags to display virtual tags
	- added --triggers and --triggered by to man page, help, and usage
	- added support for epochs

2.5.1 -> 2.5.2:
	- added -bs to build just a source package
	- included irix.req and irix.prov (Tim Mooney)
	- copy CHANGELOG* and URL tags to all subpackages
	- follow symlinks when packaging sources
	- handle %files -f with no %setup (no build directory)
	- fixed ugly i18n header bug
	- deal with lang paths sanely when entries are missing languages
	- fix bug packing /usr/doc when last file was %dir
	- added --last alias
	- fix :depflags query format
	- Group: i18n (like Summary:)
	- make --justdb install files in normal state
	- %{fssizes} segv'd for packages with empty file lists
	- updated HP-UX, OSF1, Irix 6.x dependency scripts (Tim Mooney)