@@ -1,4 +1,5 @@
 2.5.3 -> 2.5.4:
+	- eliminate redundant close in provide/require processing.
 	- solaris portability patch resurrection (Steve Sanberg).
 	- permit autogen.sh to work on non "prefix=/usr" hosts.
 	- add %license/%readme virtual file attributes
